# InterpolateStress

./: compile.sh  meson.build  setup.py
cpp/include/: api.hpp  constants.hpp  data.hpp  exitcondition.hpp  interpolate.hpp  kernel.hpp  vantagetree.hpp  weighting.hpp
cpp/src/: api.cpp  data.cpp  interpolate.cpp  kernel.cpp
interpolatestress/: __init__.py  backend.pyx  ellipsoids.py  kernel.py  stress.py  table.py
interpolatestress/data/: __init__.py  bird2002.py  geojson.py  heidbach2016.py
